# snake_the_game

./: .gitignore  CMakeLists.txt
SFML/: CMakeLists.txt
SFML/include/: SFML_snake.h
SFML/src/: SFML_snake.cpp  main.cpp
char/: CMakeLists.txt
char/include/: char_snake.h
char/src/: char_snake.cpp  main.cpp
core/: CMakeLists.txt
core/include/: snake_the_game.h
core/src/: snake_the_game.cpp
